--- a/site/package.json
+++ b/site/package.json
@@ -9,7 +9,11 @@
     "astro": "node node_modules/astro/astro.js"
   },
   "dependencies": {
-    "astro": "^5.16.10"
+    "@astrojs/mdx": "^4.3.13",
+    "@astrojs/rss": "^4.0.15",
+    "astro": "^5.16.10",
+    "mdast-util-to-string": "^4.0.0",
+    "reading-time": "^1.5.0"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
